[package]
name = "riff"
version = "0.1.0"
edition = "2021"
description = "A simple diff tool written in Rust"
authors = ["Yasir Shariff <yasir@shariff.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
colored = "2.0.0"
